<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#000"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="@dimen/_10sdp"
    android:layout_marginRight="@dimen/_30sdp"
    android:layout_marginLeft="@dimen/_30sdp"
    android:layout_marginStart="@dimen/_30sdp"
    android:layout_marginEnd="@dimen/_30sdp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:padding="@dimen/_10sdp"
        android:textStyle="bold"
        android:textSize="@dimen/_18sdp"
        android:textColor="#ffffff"
        android:text="@string/Confirm_Send_The_Request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:padding="@dimen/_20sdp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_weight="1"
            android:layout_gravity="start"
            android:gravity="start"
            android:id="@+id/no"
            android:background="#00dadada"
            android:text="@string/Cancle"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:layout_weight="1"
            android:layout_gravity="end"
            android:gravity="end"
            android:id="@+id/ok"
            android:background="#00dadada"
            android:text="@string/Confirm"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>