<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.Inspira.odo.buyerUi.MakTyreRequest"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/backgraud"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight=".9"
    >
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgraud"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorPrimaryDark"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp" >
            <ImageView
                android:id="@+id/go_back"
                android:layout_gravity="start"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_40sdp"
                android:padding="@dimen/_5sdp"
                android:layout_margin="@dimen/_10sdp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/back"
                android:contentDescription="back" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="#fff"
                android:text="@string/MakTyreRequest"
                android:id="@+id/wasf_titel"
                />

        </android.support.v7.widget.Toolbar>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <EditText
                android:id="@+id/Size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00ffffff"
                android:hint="@string/Size"
                android:inputType="phone"
                android:minHeight="@dimen/_40sdp"
                android:padding="@dimen/_5sdp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="#dea63e" />

            <CheckBox
                android:id="@+id/Run_flot_tyres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_20sdp"
                android:button="@drawable/selector"
                android:buttonTint="@color/colorPrimary"
                android:gravity="center"
                android:minHeight="@dimen/_40sdp"
                android:padding="@dimen/_5sdp"
                android:text="@string/Run_flot_tyres"
                android:textColor="#ffffff"
                android:visibility="gone" />

        <RadioGroup
            android:layout_gravity="center"
            android:id="@+id/radioG"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:minHeight="@dimen/_40sdp"
                android:theme="@style/MyRaidoButtonTwo"
                android:id="@+id/one_Tyre"
                android:layout_width="wrap_content"
                android:button="@drawable/selector"
                android:textColor="#ffffff"
                android:shadowColor="@color/colorPrimary"
                android:buttonTint="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:text="@string/one_Tyre" />

            <RadioButton
                android:minHeight="@dimen/_40sdp"

                android:id="@+id/two_tyre"
                android:layout_width="wrap_content"
                android:button="@drawable/selector"
                android:textColor="#ffffff"
                android:buttonTint="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:text="@string/two_tyre" />

            <RadioButton
                android:minHeight="@dimen/_40sdp"

                android:id="@+id/four_tyre"
                android:layout_width="wrap_content"
                android:textColor="#ffffff"
                android:button="@drawable/selector"
                android:buttonTint="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:text="@string/four_tyre" />


        </RadioGroup>

        </LinearLayout>

    </LinearLayout>


</ScrollView>
    <Button
        android:layout_gravity="bottom"
        android:padding="@dimen/_5sdp"
        android:textAllCaps="false"
        style="?metaButtonBarButtonStyle"
        android:textSize="@dimen/_20sdp"
        android:background="#dcae3b"
        android:id="@+id/saveData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submet_requst"/>
</LinearLayout>