<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#000"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="@dimen/_10sdp"
    android:layout_marginRight="@dimen/_30sdp"
    android:layout_marginLeft="@dimen/_30sdp"
    android:layout_marginStart="@dimen/_30sdp"
    android:layout_marginEnd="@dimen/_30sdp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:layout_gravity="start"
            android:gravity="start"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:background="#00dadada"
            android:text="@string/filters"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
       <LinearLayout
           android:layout_weight="1"
           android:padding="@dimen/_10sdp"
           android:orientation="vertical"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">
           <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:theme="@style/TextLabel"
               android:layout_height="wrap_content">

               <EditText
                   android:id="@+id/price_from"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/price_from"
                   android:background="#00ffffff"
                   android:inputType="textPersonName"
                   android:textColor="#ffffff"
                   android:textColorHint="#ffffff" />

           </android.support.design.widget.TextInputLayout>

           <View
               android:layout_width="match_parent"
               android:background="#dea63e"
               android:layout_height="@dimen/_1sdp"/>
       </LinearLayout>

       <LinearLayout
           android:padding="@dimen/_10sdp"
           android:layout_weight="1"
           android:orientation="vertical"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">
           <android.support.design.widget.TextInputLayout
               android:layout_width="match_parent"
               android:theme="@style/TextLabel"
               android:layout_height="wrap_content">

               <EditText
                   android:id="@+id/to_price"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/to_price"
                   android:background="#00ffffff"
                   android:inputType="textPersonName"
                   android:textColor="#ffffff"
                   android:textColorHint="#ffffff" />

           </android.support.design.widget.TextInputLayout>

           <View
               android:layout_width="match_parent"
               android:background="#dea63e"
               android:layout_height="@dimen/_1sdp"/>
       </LinearLayout>


   </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:theme="@style/TextLabel"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/Describetion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Describetion"
            android:background="#00ffffff"
            android:inputType="textPersonName"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff" />

    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:background="#dea63e"
        android:layout_height="@dimen/_1sdp"/>

    <Spinner
        android:layout_marginTop="@dimen/_20sdp"
        android:id="@+id/addArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00ffffff"
        android:spinnerMode="dropdown"
        style="@style/Base.Widget.AppCompat.Spinner"
        android:popupBackground="@android:color/transparent"
        android:inputType="text"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        />

    <View
        android:layout_width="match_parent"
        android:background="#dea63e"
        android:layout_height="@dimen/_1sdp"/>




    <LinearLayout
        android:padding="@dimen/_10sdp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_weight="1"
            android:layout_gravity="end"
            android:gravity="end"
            android:id="@+id/Search"
            android:background="#00dadada"
            android:text="@string/apply"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>